tests/fixtures/invalid/min_dict_set.py
# Cannot call min() with Dict[str, int], Set[int]
x = min({"a": 1}, {1, 2, 3})
